# cpp-csv-tool

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.csv  result.csv
include/: csv_reader.hpp
src/: csv_reader.cpp  main.cpp
tests/: test_edge.cpp
